# django-crm

./: Dockerfile  Makefile  README.md  build_files.sh  docker-compose.yml  mydb.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: devops.yml
config/: settings.py  urls.py
crm/: admin.py  forms.py  models.py  urls.py  views.py
crm/migrations/: 0001_initial.py
crm/templates/: add_record.html  base.html  home.html  navbar.html  record.html  register.html  update_record.html
