[tool.poetry]
name = "django-crm"
version = "0.1.0"
description = ""
authors = ["Subrata Mondal <subratasubha2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.4"
mysql-connector-python = "^8.3.0"
mysql = "^0.0.3"
black = "^24.4.0"
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pylint = "^3.1.0"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
